fix z-index

--- a/src/components/linkBubble/index.scss
+++ b/src/components/linkBubble/index.scss
@@ -8,7 +8,7 @@
     border: 1px solid;
     border-color: #bbb #bbb #a8a8a8;
     padding: 16px;
-    z-index: 1201;
+    z-index: 400001;
     .weditor-bubble-only-read{
         a:active,a:link,a:visited{
             color: #15c;
